--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
+
 }
 
 dependencies {
@@ -25,13 +28,10 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-
     compile 'de.hdodenhof:circleimageview:2.1.0'
-
     compile 'com.android.support:design:24.0.0'
     compile 'it.sephiroth.android.library.picasso:picasso:2.5.2.4b'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-
-
+    compile files('libs/Msc.jar')
+    compile files('libs/Sunflower.jar')
 }
