登录直播完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"/>
+        <activity android:name=".SignUpActivity"/>
+        <activity android:name=".MyInFormationActivity"/>
+        <activity android:name=".MoquanLiveActitvty"/>
     </application>
 
 </manifest>
