--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
+//apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 23
@@ -44,4 +45,5 @@ dependencies {
     compile files('libs/rxandroid-1.2.0.jar')
     compile files('libs/rxjava-1.1.6.jar')
     compile 'com.android.support:recyclerview-v7:23.4.0'
+
 }
