--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,16 @@ apply plugin: 'com.android.application'
 apply plugin: 'org.greenrobot.greendao'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'MoJi'
+            keyPassword '123456'
+            storeFile file('/Users/dllo/Desktop/Keystore.jks')
+            storePassword '123456'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         applicationId "lanou.mojiweather"
         minSdkVersion 18
@@ -18,22 +25,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     sourceSets {
         main.jniLibs.srcDirs = ['libs']
     }
-
-
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:design:23.4.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/Msc.jar')
     compile files('libs/Sunflower.jar')
     compile 'org.greenrobot:greendao:3.1.1'
@@ -44,4 +47,6 @@ dependencies {
     compile files('libs/rxandroid-1.2.0.jar')
     compile files('libs/rxjava-1.1.6.jar')
     compile 'com.android.support:recyclerview-v7:23.4.0'
+
+
 }
